# cpp_protobuf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/protobuf/: message.proto
src/protobuf_parser/: DelimitedMessagesStreamParser.cpp  DelimitedMessagesStreamParser.h  DelimitedMessagesStreamParser.hpp  helpers.cpp  helpers.h  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
